--- a/security-bowerser/src/main/resources/application.yml
+++ b/security-bowerser/src/main/resources/application.yml
@@ -13,3 +13,4 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:com/wei/mapper/*.xml
   type-aliases-package: classpath:com.wei.bo
+com.wei.security.browser.loginPage: /Login.html
