--- a/security-core/pom.xml
+++ b/security-core/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.wei</groupId>
-        <artifactId>springsecurity</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>security-bowerser</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.wei</groupId>
-    <artifactId>security-bowerser</artifactId>
+    <artifactId>security-core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>security-bowerser</name>
+    <name>security-core</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -26,17 +26,18 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
