--- a/security-bowerser/src/main/resources/application.yml
+++ b/security-bowerser/src/main/resources/application.yml
@@ -14,4 +14,10 @@ mybatis:
   mapper-locations: classpath:com/wei/mapper/*.xml
   type-aliases-package: classpath:com.wei.bo
 #配置放行登录界面的url,当系统访问此页面的时候,不会弹出(访问的服务需要身份验证)
-com.wei.security.browser.loginPage: /Login.html
+com:
+  wei:
+    security:
+      browser:
+        loginPage: /Login.html
+        fairUrl: /Error.html
+        successUrl: /Success.html
